Fix invisible toggle.

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -315,6 +315,21 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 
+.dashboard-subnav {
+  background-color: #ECFFFD;
+  border-bottom: 1px solid #BDFFF6;
+  margin-top: -20px;
+  .navbar {
+    .navbar-toggle {
+      background-color: darken(#ECFFFD, 50%);
+      border-color: white;
+      .icon-bar {
+        background-color: white;
+      }
+    }
+  }
+}
+
 // ------------------ Cart ------------------
 
 .restaurant-menu-wrapper {
